--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
-    "node": "^23.11.0"
+    "node": "^23.11.0",
+    "socket.io": "^4.8.1"
   }
 }
